--- a/customize.yaml
+++ b/customize.yaml
@@ -10,3 +10,7 @@ light.hue_color_lamp_1:
   hidden: true
 light.hue_color_lamp_4:
   hidden: true
+light.bedroom:
+  hidden: true
+light.flux_bedroom_light:
+  friendly_name: Michael's Bedroom Light
