--- a/groups/system.yaml
+++ b/groups/system.yaml
@@ -1,8 +1,10 @@
 #  system:
     name: "System"
     entities:
-      - sensor.since_last_boot
       - sensor.memory_use_percent
+      - sensor.memory_free
       - sensor.processor_use
+      - sensor.disk_use_percent_home
       - sensor.last_boot
       - sensor.since_last_boot
+      - sensor.time_online
