--- a/groups/asusrouter.yaml
+++ b/groups/asusrouter.yaml
@@ -2,12 +2,15 @@
     name: "Asus Router"
     icon: mdi:router-wireless
     entities:
+    - device_tracker.84a46636c112
     - device_tracker.d8cb8a70e9cb
     - device_tracker.20ab37562881
     - device_tracker.80e65056158c
     - device_tracker.accf856ba107
     - device_tracker.lunziphone_2
+    - device_tracker.mlunzerlap
     - device_tracker.amod
     - device_tracker.amodwin
     - device_tracker.anyoneminutesea
     - device_tracker.linutt
+    - device_tracker.lunrise
