--- a/groups/bluetooth.yaml
+++ b/groups/bluetooth.yaml
@@ -7,3 +7,4 @@
     - device_tracker.pb2032
     - device_tracker.playbulb_colour
     - device_tracker.wills_iphone_
+    - device_tracker.echo_dotu14
