--- a/configuration.yaml
+++ b/configuration.yaml
@@ -33,6 +33,8 @@ config:
 # Enables iOS
 ios:
 
+python_script:
+
 http:
   # Secrets are defined in the file secrets.yaml
   api_password: !secret http_api_password
@@ -87,7 +89,7 @@ sensor: !include sensors.yaml
 #D-Link Camera
 camera:
   - platform: mjpeg
-    name: Front Door Camera
+    name: Laundry Camera
     still_image_url: !secret camera_front_door_still_image_url
     mjpeg_url: !secret camera_front_door_mjpeg_url
 # Shows device_tracker.tile_kia on a map.
@@ -198,3 +200,8 @@ light:
     devices:
       192.168.1.121:
         name: flux_bedroom_light
+  - platform: group
+    name: Michael's Bedroom Lights
+    entities:
+      - light.mclighting01
+      - light.flux_bedroom_light
