--- a/groups/asusrouter.yaml
+++ b/groups/asusrouter.yaml
@@ -7,10 +7,14 @@
     - device_tracker.20ab37562881
     - device_tracker.80e65056158c
     - device_tracker.accf856ba107
-    - device_tracker.lunziphone_2
+    - device_tracker.lunziphone
     - device_tracker.mlunzerlap
     - device_tracker.amod
     - device_tracker.amodwin
     - device_tracker.anyoneminutesea
     - device_tracker.linutt
     - device_tracker.lunrise
+    - device_tracker.10lunz
+    - device_tracker.amandasipad
+    - device_tracker.laundry
+    - device_tracker.lunzpi
