--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,14 +7,16 @@ homeassistant:
   # Impacts weather/sunrise data (altitude above sea level in meters)
   elevation: !secret homeassistant_elevation
   # metric for Metric, imperial for Imperial
-  unit_system: imperial
+  unit_system: !secret unit_system
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-  time_zone: America/Los_Angeles
+  time_zone: !secret time_zone
   # Customization file
   customize: !include customize.yaml
   packages: !include_dir_named packages
 
-# zone: !include zones.yaml
+zone: !include zones.yaml
+#I hope this is the right spot for the zone config.
+
 
 # switch: !include switches.yaml
 # device_tracker: !include device_tracker.yaml
@@ -33,7 +35,9 @@ config:
 # Enables iOS
 ios:
 
-python_script:
+# python_script:
+# https://github.com/maattdiy/home-assistant-config/blob/master/python_scripts/summary.py
+
 
 http:
   # Secrets are defined in the file secrets.yaml
@@ -102,12 +106,12 @@ camera:
     name: ISS
     still_image_url: https://maps.googleapis.com/maps/api/staticmap?center={{ states.binary_sensor.iss.attributes.lat }},{{ states.binary_sensor.iss.attributes.long }}&zoom=5&size=500x500&maptype=roadmap&markers=color:blue%7Clabel:P%7C{{ states.binary_sensor.iss.attributes.lat }},{{ states.binary_sensor.iss.attributes.long }}
     limit_refetch_to_url_change: true
-    
+
 binary_sensor:
   - platform: iss
     show_on_map: False
 
-  
+
 mqtt:
   broker: !secret MQTT_broker
   username: !secret MQTT_username
@@ -148,10 +152,10 @@ panel_iframe:
     title: 'Node-Red'
     icon: 'mdi:shuffle-variant'
     url: !secret nodered_url
-  router:
-    title: Asus Router
-    icon: mdi:router-wireless
-    url: !secret router_url
+  # router:
+  #   title: Asus Router
+  #   icon: mdi:router-wireless
+  #   url: !secret router_url
 
 media_player:
   - platform: mpd
@@ -161,6 +165,7 @@ media_player:
   - platform: spotify
     client_id: !secret spotify_client_id
     client_secret: !secret spotify_client_secret
+  - platform: firetv
   # - platform: itunes
   #   host: !secret itunes_host
 
@@ -179,8 +184,7 @@ device_tracker:
 #     username: !secret icloud_username
 #     password: !secret icloud_password
   - platform: bluetooth_tracker
-    
-    
+
 # duckDNS
 duckdns:
   domain: !secret duckdns_domain
