--- a/entity_registry.yaml
+++ b/entity_registry.yaml
@@ -78,19 +78,35 @@ sensor.cold__flu_forecasted_average:
   name:
   platform: pollen
   unique_id: 94110_cold__flu_forecasted_average
-sensor.us_air_quality_index:
-  name:
-  platform: airvisual
-  unique_id: 37.752377,-122.419362_aqi
-sensor.us_main_pollutant:
-  name:
-  platform: airvisual
-  unique_id: 37.752377,-122.419362_main_pollutant
-sensor.us_air_pollution_level:
-  name:
-  platform: airvisual
-  unique_id: 37.752377,-122.419362_pollution_level
+# sensor.us_air_quality_index:
+#   name:
+#   platform: airvisual
+#   unique_id: 37.752377,-122.419362_aqi
+# sensor.us_main_pollutant:
+#   name:
+#   platform: airvisual
+#   unique_id: 37.752377,-122.419362_main_pollutant
+# sensor.us_air_pollution_level:
+#   name:
+#   platform: airvisual
+#   unique_id: 37.752377,-122.419362_pollution_level
 media_player.the_mad_room_speaker:
   name:
   platform: cast
   unique_id: b09b2dc1-716d-90e3-4c22-c1893e066cb7
+sensor.us_air_quality_index:
+  name:
+  platform: airvisual
+  unique_id: 37.752367,-122.419362_aqi
+sensor.us_main_pollutant:
+  name:
+  platform: airvisual
+  unique_id: 37.752367,-122.419362_main_pollutant
+sensor.us_air_pollution_level:
+  name:
+  platform: airvisual
+  unique_id: 37.752367,-122.419362_pollution_level
+media_player.chrome:
+  name:
+  platform: plex
+  unique_id: 0ylmutj3mm1cdeyra3hinceg
