--- a/groups/iphone.yaml
+++ b/groups/iphone.yaml
@@ -1,7 +1,10 @@
 #   LunziPhone:
-    name: "LunziPhone"
+    name: "LunziPhone & LunziPhone5-16GB"
     icon: mdi:cellphone-iphone
     entities:
       - device_tracker.lunziphone
       - sensor.lunziphone_battery_level
       - sensor.lunziphone_battery_state
+      - device_tracker.lunziphone516gb
+      - sensor.lunziphone516gb_battery_level
+      - sensor.lunziphone516gb_battery_state
