--- a/sensors.yaml
+++ b/sensors.yaml
@@ -64,8 +64,10 @@
 #               mdi:battery-alert
 #             {% endif %}
 
+
+#### CPU Speed Sensor is throwing a lot of errors ####
 # CPU Speed Sensor
-  - platform: cpuspeed
+#   - platform: cpuspeed
   
 # LunzPi Supervisor Status
 #not currently working for whatever reason
@@ -79,7 +81,7 @@
     - !secret email
 
 
-# Version Sensor to add to Raspberry Pi Group
+# Version Sensor to add to System Group
   - platform: version
   
   
@@ -114,12 +116,14 @@
     - type: last_boot
     - type: since_last_boot
     
+### Not sure if this will work with proxmox to report the host system battery state
+  - platform: linux_battery
+    
 # Speed Test Sensor
   - platform: speedtest
     minute: 30
     hour:
-    - 0
-    - 12
+    - 4
     monitored_conditions:
       - ping
       - download
